fixed col/row spacing for header

--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ html {
 
 .admin-container {
     display: grid;
-    grid-template: 1fr 4fr / 1fr 1.5fr 1.5fr 1fr;
+    grid-template: 165px 4fr / 1fr 1.5fr 1.5fr 1fr;
 }
 
 /* SIDEBAR ITEMS SIDEBAR ITEMS SIDEBAR ITEMS SIDEBAR ITEMS SIDEBAR ITEMS SIDEBAR ITEMS SIDEBAR ITEMS SIDEBAR ITEMS SIDEBAR ITEMS */
@@ -21,8 +21,9 @@ html {
 
 .header {
     background-color: #fafaf9;
+    grid-row: 1 / 2;
     grid-column: 2 / 5;
-    grid-row: 1;
+    height: 165px;
 }
 
 .header-top {
@@ -73,15 +74,10 @@ html {
     justify-self: start;
     align-self: center;
     padding-right: 50px;
+    color: grey;
 }
 
 /* BOTTOM BANNER ITEMS BOTTOM BANNER ITEMS BOTTOM BANNER ITEMS BOTTOM BANNER ITEMS BOTTOM BANNER ITEMS BOTTOM BANNER ITEMS */
-
-.header {
-    grid-row: 1 / 2;
-    grid-column: 2 / 5;
-    height: 165px;
-}
 
 .header-bottom {
     display: grid;
@@ -98,11 +94,15 @@ html {
     align-self: center;
 }
 
-.welcome-message {
+#welcome-message {
     justify-self: center;
     align-self: center;
     grid-row: 1;
     grid-column: 2;
+}
+
+.welcome-text {
+    color: grey;
 }
 
 #new-post {
@@ -130,6 +130,9 @@ html {
     width: 100px;
     height: 30px;
     border-radius: 10px;
+    background-color: white;
+    color: grey;
+    border: 1px solid grey;
 }
 
 /* MAIN DISPLAY ITEMS MAIN DISPLAY ITEMS MAIN DISPLAY ITEMS MAIN DISPLAY ITEMS MAIN DISPLAY ITEMS MAIN DISPLAY ITEMS MAIN DISPLAY ITEMS */
